avance 09-08-2025